Incluidos retornos de linea

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <h1> Parques tematicos que visitar en Orlando (Fl, USA) </h1>
-Universal Studios
-Disney, Magic Kingdom
-Disney, Epcot
+  <h> Universal Studios </h>
+  <h> Disney, Magic Kingdom </h>
+  <h> Disney, Epcot </h>
 
 </html>
